# open-deep-research

./: .gitignore  DESIGN.md  LICENSE  README.md  config.yaml  docker-compose.yml  gemini-deep-research.md  pyproject.toml
.github/workflows/: ci.yml
examples/: config-claude.yaml  config-gemini.yaml  config-ollama.yaml  config-openai.yaml  config-searxng.yaml
open_deep_research/: __init__.py  __main__.py  config.py  models.py
open_deep_research/cli/: app.py  commands.py  display.py
open_deep_research/core/: evaluator.py  planner.py  reader.py  searcher.py  synthesizer.py  verifier.py
open_deep_research/embeddings/: dedup.py
open_deep_research/llm/: client.py
open_deep_research/providers/: __init__.py  base.py  duckduckgo.py  searxng.py
open_deep_research/state/: budget.py  checkpoint.py  session.py
searxng/: settings.yml
tests/: test_config.py  test_dedup.py  test_evaluator.py  test_llm_client.py  test_models.py  test_reader.py  test_state.py  test_synthesizer.py  test_verifier.py
