[project]
name = "open-deep-research"
version = "0.1.0"
description = "Autonomous multi-step web research agent implementing Gemini Deep Research algorithms"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
keywords = ["research", "ai", "llm", "agent", "deep-research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "litellm>=1.40",
    "aiohttp>=3.9",
    "trafilatura>=1.8",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "ddgs>=9.0",
]

[project.optional-dependencies]
quality = [
    "sentence-transformers>=2.0",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
odr = "open_deep_research.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
